Tests/CompilerTests/negative/recursive-implicit-deinit.diagnostics.expected
negative/recursive-implicit-deinit.hylo:12.24: error: implicit deinitialization of instances of 'T' causes infinite recursion in this context
    fun deinit() sink {}
                       ^
